--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Upload to server via SFTP
-        uses: appleboy/scp-action@v0.1.7
+      - name: Upload index.html via SFTP
+        uses: appleboy/sftp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASS }}
           port: 22
-          source: "."
+          source: "index.html"
           target: "."
           debug: true
