--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,13 +14,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Upload to server via SFTP
-        uses: appleboy/scp-action@v0.1.7
+      - name: Deploy to server via SFTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
-          host: ${{ secrets.SERVER_HOST }}
+          server: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           password: ${{ secrets.SERVER_PASS }}
+          protocol: sftp # Belangrijk: specificeer SFTP
           port: 22
-          source: "."
-          target: "."
-          debug: true
+          # De onderstaande regel is optioneel, maar verwijdert oude bestanden
+          # die niet meer in je repository zitten. Verwijder de '#' om het te activeren.
+          # dangerous-clean-slate: true
