--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,13 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy to server via SCP
-        uses: appleboy/scp-action@v0.1.7
+      - name: Deploy to Server via SFTP
+        uses: wlixcc/SFTP-Deploy-Action@v1.2.1
         with:
-          host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
+          server: ${{ secrets.SERVER_HOST }}
           password: ${{ secrets.SERVER_PASS }}
           port: 22
-          source: "."
-          target: "/"  # <-- We proberen nu "/" in plaats van "."
-          debug: true
+          local_path: "./*" 
+          remote_path: "/"
