--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy to Server via rsync
+      - name: Deploy to Server
         uses: easingthemes/ssh-deploy@main
         with:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           REMOTE_HOST: ${{ secrets.SERVER_HOST }}
           REMOTE_USER: ${{ secrets.SERVER_USER }}
-          REMOTE_PASSWORD: ${{ secrets.SERVER_PASS }}
           SOURCE: "./"
           TARGET: "/"
           ARGS: "-rltgoDzvO --delete"
