--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Deploy to Server via Pure SFTP
-        uses: wlixcc/SFTP-Deploy-Action@v1.2.1
+      - name: Deploy via direct SCP command
+        uses: appleboy/ssh-action@v1.0.3
         with:
+          host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
-          server: ${{ secrets.SERVER_HOST }}
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}
-          local_path: "./*"
-          remote_path: "/"
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          script: scp -r -o StrictHostKeyChecking=no ./* ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}:/
